test: update tests for paginated getAllExchangeRates endpoint
- Update service tests to verify pagination logic and sorting
- Update controller tests to verify PageResponse structure
- Add tests for page metadata validation
- Add edge cases: multiple pages, size limits, empty results